--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@
         <div class="container mx-auto">
           <section
             id="about"
-            class="mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/80 to-gray-600/80 text-white rounded shadow text-lg flex flex-col items-start justify-start space-y-2 md:space-y-4 md:text-xl"
+            class="mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/80 to-gray-600/80 text-white rounded shadow flex flex-col items-start justify-start space-y-2 md:space-y-4 text-xs md:text-2xl"
           >
-            <p class="leading-loose"><span class="font-bold text-yellow-200 text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
-            <p class="leading-loose"><span class="font-bold text-green-400 text-2xl md:text-3xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
+            <p class="leading-loose"><span class="font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Who:</span> All Singles 31+</p>
+            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">What:</span> Game Night/ Family Home Evening</p>
+            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
               of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
             1050 E 100 N, Lindon</p>
-            <p class="leading-loose"><span class="font-bold text-orange-400 text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
-            <p class="leading-loose"><span class="font-bold text-purple-400 text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
+            <p class="leading-loose"><span class="font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
+            <p class="leading-loose"><span class="font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
             <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-2xl md:text-3xl">How this started:</span> I was at an event for
+            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">How this started:</span> I was at an event for
                 <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
         </div>
@@ -85,12 +85,13 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, March 6, 2023</p>
-        <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
+        <p class="pb-4 text-yellow-400">Monday, Apr 10, 2023</p>
+        <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
       </section>
 
       <section id="map" class="overflow-x-auto flex flex-col items-center justify-center py-24">
-        <h3 class="font-bold text-3xl text-center py-8 text-green-600">Map</h3>
+        <h3 class="font-bold text-3xl text-center pt-8 pb-4 text-green-600">Map</h3>
+        <p class="p-4 text-sm md:text-base text-center">Enter the south doors for quickest access to the Relief Society room.</p>
         <div class="md:hidden">
           <!-- MOBILE MAP -->
           <iframe
@@ -158,6 +159,10 @@
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
           <h3 class="font-bold text-3xl text-center py-8 text-orange-600">Past Events</h3>
           <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+            <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
+          </div>
+
+          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
             <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023"
               class="w-full max-w-4xl rounded shadow-lg" />
           </div>
@@ -165,12 +170,16 @@
             <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
               class="w-full max-w-5xl rounded shadow-lg" />
           </div>
-          <div class="w-full mx-auto max-w-6xl shadow rounded">
+          <div class="w-full mx-auto max-w-4xl shadow rounded">
             <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
               class="rounded" />
           </div>
-          <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
-          <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" />
+          <div class="w-full mx-auto max-w-4xl shadow rounded">
+            <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
+          </div>
+          <div class="w-full mx-auto max-w-4xl shadow rounded">
+            <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" />
+          </div>
           <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" />
           <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Aug 2022" />
           <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 31+ July 2022" />
