Adds playlist for april

--- a/resources.html
+++ b/resources.html
@@ -165,6 +165,12 @@
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
               loading="lazy"></iframe>
           </div>
+          
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium">For Easter Time:</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0bEGv4S8HLsSFdCdm4pu4F?utm_source=generator&theme=0" width="100%" height="80" 
+            frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium">For National Ice Cream Month!?:</p>
