--- a/resources.html
+++ b/resources.html
@@ -248,6 +248,11 @@
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
 
         <div>
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">April</h5>
+          <p>We started off our night with an "Who am I?" Easter trivia game! You can get the questions 
+            <a href="https://www.creativebiblestudy.com/Easter-quiz.html" target="_blank" rel="nofollow noreferrer noopener" class="text-purple-500 hover:text-purple-400">here</a>.</p>
+        </div>
+        <div>
           <h5 class="text-center font-marhey text-sm md:text-xl font-bold">February</h5>
           <p class="text-center">We talked about the different types of love, and what is the Greatest Love of All.</p>
           <p class="text-center">We played a game I made out of lyrics of famous love songs, which can be found
