--- a/resources.html
+++ b/resources.html
@@ -138,12 +138,12 @@
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
 
-      <section id="playlists" class="pb-12">
-        <h4 class="font-marhey text-base md:text-2xl font-bold text-center">Playlists!</h4>
-        <div class="w-full flex flex-wrap items-center justify-center">
+      <section id="playlists" class="pb-12 container">
+        <h4 class="font-marhey text-base md:text-2xl font-bold text-center pb-3">Playlists!</h4>
+        <div class="w-full grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-2">
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For the New Year:</p>
+            <p class="font-marhey font-medium text-center">For the New Year:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/1o1AoVUiHhADDBpglz6XT7?utm_source=generator&theme=0" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
@@ -151,7 +151,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Valentine's Season:</p>
+            <p class="font-marhey font-medium text-center">For Valentine's Season:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6QBnCnu0hyMMEEmUuAOcOk?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -159,7 +159,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For International Women's Month:</p>
+            <p class="font-marhey font-medium text-center text-sm">For International Women's Month:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/2w6XUvCaixQMutQZ8TIhxu?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -167,18 +167,18 @@
           </div>
           
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Easter Time:</p>
+            <p class="font-marhey font-medium text-center">For Easter Time:</p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0bEGv4S8HLsSFdCdm4pu4F?utm_source=generator&theme=0" width="100%" height="80" 
             frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For May:</p>
+            <p class="font-marhey font-medium text-center">For May:</p>
           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4NmiRQaif8fjzV28MaaDNI?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For National Ice Cream Month!?:</p>
+            <p class="font-marhey font-medium text-center text-sm">For National Ice Cream Month!?:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/62pygMAFVxd43PZsjnctKm?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
@@ -186,15 +186,15 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Back-to-School Time:</p>
+            <p class="font-marhey font-medium text-center">For Back-to-School Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/5A7wJ9BYAj9Taf1GZKN7JM?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
               allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
           </div>
 
-          <div class="p-4 md:p-8 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Fall:</p>
+          <div class="p-2 flex flex-col items-center justify-center space-y-2 w-full">
+            <p class="font-marhey font-medium text-center">For Fall:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6V9726IeUpGowYDz8DtiqT?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -202,7 +202,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Halloween Time:</p>
+            <p class="font-marhey font-medium text-center">For Halloween Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6v9nq8oEjzJaoUD5eyOWrH?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen=""
@@ -210,7 +210,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Thanksgiving Time:</p>
+            <p class="font-marhey font-medium text-center">For Thanksgiving Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/6GEgf4S5FjE6SdjGdooFnF?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -218,7 +218,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For More Thanksgiving Time:</p>
+            <p class="font-marhey font-medium text-center">For More Thanksgiving Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/5rtwA89v3Q61VkfHEeGuiU?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -226,7 +226,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For Christmastime:</p>
+            <p class="font-marhey font-medium text-center">For Christmastime:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/2zpDQgI917BXf7WvVl439v?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -234,7 +234,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
-            <p class="font-marhey font-medium">For More Christmastime:</p>
+            <p class="font-marhey font-medium text-center">For More Christmastime:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/4VI0LZvGis3Td8Crx9N1v1?utm_source=generator" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
