--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css2?family=Marhey:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css" integrity="sha512-esCylxvZEDuZ+3L2JRa6wYVNDihaDw5fDBUPZ9X9igrCIMHILsPiR4A7+dKmqqzvvIH8lzRlRV4b4V7Q9es/ew==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -38,6 +40,11 @@
         }
       }
     </script>
+    <style>
+      .glide__bullet--active {
+        background: blue !important;
+      }
+    </style>
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -157,37 +164,131 @@
 
       <div class="w-full bg-gray-100 py-24 px-4">
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
-          <h3 class="font-bold text-3xl text-center py-8 text-orange-600">Past Events</h3>
-          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
-            <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
-          </div>
-          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
-            <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
+          <h3 class="font-bold text-3xl text-center pt-8 text-orange-600">Past Events</h3>
+
+          <div class="container"> 
+            <div class="glide">
+              <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_8638.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_0860.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_9587.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_2065.png')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_1983.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_1837.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-contain shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80 md:bg-cover" style="width: 500px; background-image: url('./static/images/carousel/catan-3d.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/chronology-may-2022.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/little-luau-snacks.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/plastic-wrap-ball-game.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/word-on-the-street.JPG')">
+                    </div>                  
+                  </li>
+                </ul>
+              </div>
+
+              <div class="glide__arrows flex items-center justify-between w-full py-3 space-x-4" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left hover:bg-fuchsia-900 rounded-full" data-glide-dir="<">
+                  <svg fill="#fb19fc" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" 
+                  width="48px"><g><rect fill="none" height="20" width="20"/></g><g><path d="M2,10c0,4.42,3.58,8,8,8s8-3.58,8-8s-3.58-8-8-8S2,5.58,2,10z M10,9.25l3,0v1.5l-3,0L10,13l-3-3l3-3L10,9.25z"/></g></svg>
+                </button>
+                <button class="glide__arrow glide__arrow--right rounded-full hover:bg-fuchsia-900" data-glide-dir=">"><svg fill="#fb19fc" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" width="48px">
+                  <g><rect fill="none" height="20" width="20"/></g><g><path d="M18,10c0-4.42-3.58-8-8-8s-8,3.58-8,8s3.58,8,8,8S18,14.42,18,10z M10,10.75H7v-1.5h3V7l3,3l-3,3V10.75z"/></g></svg>
+                </button>
+              </div>
+              <div class="glide__bullets flex items-center justify-center" data-glide-el="controls[nav]">
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=0"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=1"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=2"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=3"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=4"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=5"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=6"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=7"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=8"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=9"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=10"></button>
+              </div>
+            </div>
           </div>
 
-          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
-            <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023"
-              class="w-full max-w-4xl rounded shadow-lg" />
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
+            </div>
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/march2023fhe.png" alt="Singles 31+ Game Night/FHE Mar 2023" class="w-full max-w-4xl rounded shadow-lg" />
+            </div>
           </div>
-          <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
-            <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
-              class="w-full max-w-5xl rounded shadow-lg" />
+
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023"
+                class="w-full max-w-4xl rounded shadow-lg" />
+            </div>
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+              <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
+                class="w-full max-w-5xl rounded shadow-lg" />
+            </div>
           </div>
-          <div class="w-full mx-auto max-w-4xl shadow rounded">
-            <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
-              class="rounded" />
+
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
+            <div class="w-full mx-auto max-w-4xl shadow rounded">
+              <img src="./static/images/fhe-game-night-dec-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Dec 2022"
+                class="rounded" />
+            </div>
+            <div class="w-full mx-auto max-w-4xl shadow rounded">
+              <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
+            </div>
           </div>
-          <div class="w-full mx-auto max-w-4xl shadow rounded">
-            <img src="./static/images/FHEGame-Night-nov-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Nov 2022" />
-          </div>
+
+          
           <div class="w-full mx-auto max-w-4xl shadow rounded">
             <img src="./static/images/oct-2022-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Oct 2022" />
           </div>
-          <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" />
-          <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Aug 2022" />
-          <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 31+ July 2022" />
-          <img src="./static/images/Game-Night-june-2022.png"
-        alt="Game Night/Family Home Evening for Singles 31+ Jun 2022" />
+
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
+            <img src="./static/images/sept-game-night.png" alt="Game Night/Family Home Evening for Singles 31+ Sept 2022" />
+            <img src="./static/images/FHE-Game-Night-VI-Aug-2022.png" alt="Game Night/Family Home Evening for Singles 31+ Aug 2022" />
+          </div>
+
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
+            <img src="./static/images/game-night-july-2022.png" alt="Game Night/Family Home Evening for Singles 31+ July 2022" />
+            <img src="./static/images/Game-Night-june-2022.png"
+              alt="Game Night/Family Home Evening for Singles 31+ Jun 2022" />
+          </div>
+
+          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 items-center justify-center">
           <div class="flex flex-col items-center justify-center">
             <img src="./static/images/game-night-may-2022.png" alt="Game Night/Family Home Evening for Singles 31+ May 2022" />
             <p>May 2022</p>
@@ -201,11 +302,16 @@
               alt="Game Night/Family Home Evening for Singles 31+ March 2022" />
             <p>March 2022</p>
           </div>
+        </div>
         </section>
       </div>
 
       <div class="py-24" id="links">
-        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600">Links to Other Singles Groups</h3>
+        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600 flex items-center justify-center space-x-2">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-12" fill="#0096FF">
+            <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"/></svg> 
+          <span>Links to Other Singles Groups</span></h3>
         <div class="flex flex-col items-center justify-center container mx-auto space-y-4 px-4">
           <a
             href="https://utahsingleadults.org/"
@@ -306,7 +412,35 @@
       <a href="./resources.html" class="text-xs text-white hover:text-orange-400 md:hidden">Resources</a>
       <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
-
+    <script>
+      const glide = new Glide('.glide', {
+        type: 'slider',
+        rewind: false,
+        gap: 12,
+        perView: 3,
+        breakpoints: {
+          1500: {
+            perView: 2.5,
+          },
+          1300: {
+            perView: 2,
+          },
+          1150: {
+            perView: 1.5
+          },
+          1000: {
+            perView: 1.35,
+          },
+          800: {
+            perView: 1.25,
+          },
+          700: {
+            perView: 1,
+          }
+        }
+      })
+      glide.mount()
+    </script>
     <script>
     // Add smooth scroll to anchor links
     const links = document.querySelectorAll("a.smooth-scroll")
