--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
         <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
           <h3 class="font-bold text-3xl text-center pt-8 text-orange-600">Past Events</h3>
 
-          <div class="container"> 
+          <!-- Desktop Carousel -->
+          <div class="hidden md:block container"> 
             <div class="glide">
               <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
@@ -195,7 +196,7 @@
                     </div>                  
                   </li>
                   <li class="glide__slide">
-                    <div class="bg-contain shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80 md:bg-cover" style="width: 500px; background-image: url('./static/images/carousel/catan-3d.JPG')">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/catan-3d.JPG')">
                     </div>                  
                   </li>
                   <li class="glide__slide">
@@ -216,6 +217,7 @@
                   </li>
                 </ul>
               </div>
+              
 
               <div class="glide__arrows flex items-center justify-between w-full py-3 space-x-4" data-glide-el="controls">
                 <button class="glide__arrow glide__arrow--left hover:bg-fuchsia-900 rounded-full" data-glide-dir="<">
@@ -239,8 +241,75 @@
                 <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=9"></button>
                 <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=10"></button>
               </div>
-            </div>
-          </div>
+            </div> <!-- end glide -->
+          </div> <!-- end glide wrapper container -->
+
+          <!-- Mobile Carousel -->
+          <div class="container md:hidden"> 
+            <div class="mobile-glide">
+              <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_8638.JPG" />               
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_0860.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_9587.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_2065.png" />                 
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_1983.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_1837.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/catan-3d.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/chronology-may-2022.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/little-luau-snacks.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/plastic-wrap-ball-game.JPG" />                  
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/word-on-the-street.JPG" />                  
+                  </li>
+                </ul>
+              </div>
+              
+
+              <div class="glide__arrows flex items-center justify-between w-full py-3 space-x-4" data-glide-el="controls">
+                <button class="glide__arrow glide__arrow--left hover:bg-fuchsia-900 rounded-full" data-glide-dir="<">
+                  <svg fill="#fb19fc" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" 
+                  width="48px"><g><rect fill="none" height="20" width="20"/></g><g><path d="M2,10c0,4.42,3.58,8,8,8s8-3.58,8-8s-3.58-8-8-8S2,5.58,2,10z M10,9.25l3,0v1.5l-3,0L10,13l-3-3l3-3L10,9.25z"/></g></svg>
+                </button>
+                <button class="glide__arrow glide__arrow--right rounded-full hover:bg-fuchsia-900" data-glide-dir=">"><svg fill="#fb19fc" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 20 20" height="48px" viewBox="0 0 20 20" width="48px">
+                  <g><rect fill="none" height="20" width="20"/></g><g><path d="M18,10c0-4.42-3.58-8-8-8s-8,3.58-8,8s3.58,8,8,8S18,14.42,18,10z M10,10.75H7v-1.5h3V7l3,3l-3,3V10.75z"/></g></svg>
+                </button>
+              </div>
+              <div class="glide__bullets flex items-center justify-center" data-glide-el="controls[nav]">
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=0"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=1"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=2"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=3"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=4"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=5"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=6"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=7"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=8"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=9"></button>
+                <button class="glide__bullet rounded-full w-3 h-3 md:w-6 md:h-6 bg-green-400 mx-2" data-glide-dir="=10"></button>
+              </div>
+            </div> <!-- end glide -->
+          </div> <!-- end glide wrapper container -->
 
           <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
             <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
@@ -440,6 +509,34 @@
         }
       })
       glide.mount()
+
+      const mobileGlide = new Glide('.mobile-glide', {
+        type: 'slider',
+        rewind: false,
+        gap: 12,
+        perView: 3,
+        breakpoints: {
+          1500: {
+            perView: 2.5,
+          },
+          1300: {
+            perView: 2,
+          },
+          1150: {
+            perView: 1.5
+          },
+          1000: {
+            perView: 1.35,
+          },
+          800: {
+            perView: 1.25,
+          },
+          700: {
+            perView: 1,
+          }
+        }
+      })
+      mobileGlide.mount()
     </script>
     <script>
     // Add smooth scroll to anchor links
