Updates file extensions

--- a/index.html
+++ b/index.html
@@ -262,13 +262,13 @@
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_2065.png" />                 
                   </li>
                   <li class="glide__slide">
-                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_1983.JPG" />                  
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_1983.jpg" />                  
                   </li>
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_1837.JPG" />                  
                   </li>
                   <li class="glide__slide">
-                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/catan-3d.JPG" />                  
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/catan-3d.jpg" />                  
                   </li>
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/chronology-may-2022.JPG" />                  
