--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
         <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
-        <p class="pb-4 text-yellow-400">Monday, May 1, 2023</p>
-        <img src="./static/images/may2023-game-night-fhe.png" alt="Singles 31+ Game Night/FHE May 2023" class="w-full max-w-4xl rounded shadow-lg" />
+        <p class="pb-4 text-yellow-400">Monday, June 5, 2023</p>
+        <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 31+ Game Night/FHE June 2023" class="w-full max-w-4xl rounded shadow-lg" />
       </section>
 
       <section id="map" class="overflow-x-auto flex flex-col items-center justify-center py-24">
@@ -313,6 +313,9 @@
 
           <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
             <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+            <img src="./static/images/may2023-game-night-fhe.png" alt="Singles 31+ Game Night/FHE May 2023" class="w-full max-w-4xl rounded shadow-lg" />
+          </div>
+            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
               <img src="./static/images/fhe-game-night-apr-2023.png" alt="Singles 31+ Game Night/FHE Apr 2023" class="w-full max-w-4xl rounded shadow-lg" />
             </div>
             <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
@@ -320,15 +323,13 @@
             </div>
           </div>
 
-          <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
-            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+
+          <div class="container flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6 md:items-center md:justify-center">
               <img src="./static/images/fhe-game-night-feb-2023.png" alt="Singles 31+ Game Night/FHE Feb 2023"
-                class="w-full max-w-4xl rounded shadow-lg" />
-            </div>
-            <div class="w-full mx-auto max-w-xl shadow rounded flex items-center justify-center">
+                class="w-full max-w-lg rounded shadow-lg" />
+            
               <img src="./static/images/fhe-game-night-jan-2023.png" alt="January 2023 Game Night"
-                class="w-full max-w-5xl rounded shadow-lg" />
-            </div>
+                class="w-full max-w-lg rounded shadow-lg" />
           </div>
 
           <div class="flex flex-col md:flex-row w-full space-y-6 md:space-y-0 md:space-x-6">
@@ -395,11 +396,6 @@
             rel="noopener noreferrer nofollow"
             class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500"
           >Mount Timpanogos Singles</a>
-
-          <a href="https://www.facebook.com/groups/utahfriendsnodramagroup" target="_blank" rel="noopener noreferrer nofollow"
-            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
-            Utah LDS Singles - Friends Group of No Drama (Facebook)
-          </a>
 
           <a href="https://www.facebook.com/groups/the.ritz.utah" target="_blank" rel="noopener noreferrer nofollow"
             class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
