Adds downloadable invitations

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <header class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-12">
-      <h1 class="font-marhey font-bold text-center py-4 text-base sm:text-3xl md:text-4xl lg:text-5xl">Game Night/ Family Home Evening</h1>
+    <header class="fixed w-full flex flex-col items-center justify-center pt-4 bg-gradient-to-b from-black to-gray-700 font-marhey text-white md:pt-6 z-40">
+      <h1 class="font-marhey font-bold text-center py-4 text-base sm:text-3xl md:text-4xl">Game Night/ Family Home Evening</h1>
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">All Singles 31+ Invited</h2>
       <nav class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1 px-4">
         <a href="#about" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">About</a>
         <a href="#upcoming" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Next Event</a>
+        <a href="#invitation" class="hidden md:inline smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Invitations</a>
         <a href="#map" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Map</a>
         <a href="#contact" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Contact</a>
         <a href="#past-events" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  hover:text-yellow-200">Past Events</a>
@@ -65,25 +66,25 @@
       </nav>
     </header>
 
-    <main class="w-full mx-auto min-h-screen pt-48 md:pt-52 flex flex-col items-center justify-center">
-      <div class="bg-cover bg-center bg-no-repeat w-full py-24 lg:py-36 px-4"
+    <main class="w-full mx-auto min-h-screen pt-16 md:pt-44 flex flex-col items-center justify-center">
+      <div class="bg-cover bg-center bg-no-repeat w-full pt-24 pb-8 lg:py-36 px-4"
         style="background-image: url('./static/images/game-background.jpg');">
         <div class="container mx-auto">
           <section
             id="about"
             class="mx-auto w-full max-w-5xl mx-auto p-4 bg-gradient-to-b from-gray-700/80 to-gray-600/80 text-white rounded shadow flex flex-col items-start justify-start space-y-2 md:space-y-4 text-xs md:text-2xl"
           >
-            <p class="leading-loose"><span class="font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Who:</span> All Singles 31+</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">What:</span> Game Night/ Family Home Evening</p>
-            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
+            <p class="leading-loose"><span class="font-bold text-yellow-200 text-lg sm:text-2xl md:text-3xl">Who:</span> All Singles 31+</p>
+            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">What:</span> Game Night/ Family Home Evening</p>
+            <p class="leading-loose"><span class="font-bold text-green-400 text-lg sm:text-2xl md:text-3xl">When:</span> Generally the 1st Monday of each month; occasionally the 2nd Monday when conflicts occur. 7-9 pm</p>
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">Where:</span> The Relief Society room (the room on the southwest corner of the building)
               of the <a href="https://goo.gl/maps/795tAoZzJeVASmmBA" target="_blank" rel="noopener noreferrer nofollow" class="hover:text-yellow-200">Lindon Stake Center</a>:
             1050 E 100 N, Lindon</p>
-            <p class="leading-loose"><span class="font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
-            <p class="leading-loose"><span class="font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
+            <p class="leading-loose"><span class="font-bold text-orange-400 text-lg sm:text-2xl md:text-3xl">Why:</span> To have fun, meet new people, build stronger connections with others, and strengthen our testimonies.</p>
+            <p class="leading-loose"><span class="font-bold text-purple-400 text-lg sm:text-2xl md:text-3xl">How:</span> Bring games and/or a snack to share, if you'd like. Also, invite others who might be interested!</p>
             <p class="leading-loose">We usually have a different theme each month to makes things even more interesting!</p>
-            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
-            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl lg:text-5xl">How this started:</span> I was at an event for
+            <p class="leading-loose"><span class="font-bold text-red-400 text-lg sm:text-2xl md:text-3xl">Agenda:</span> The evening starts with a spiritual thought/message. Next up is a group game with everyone. Then we break off into smaller groups and play whatever game each table picks.</p>
+            <p class="leading-loose"><span class="font-bold text-blue-400 text-lg sm:text-2xl md:text-3xl">How this started:</span> I was at an event for
                 <a href="https://www.facebook.com/groups/43519568353" target="_blank" rel="noopener nofollow noreferrer" class="hover:text-yellow-200">widows and widowers</a> and commented how I'd love to have more events in the Lindon area. So someone asked me, "Well, why don't you start one?" Well, why not? We started out with widows and widowers but soon expanded this event to include all singles.</p>
           </section>
         </div>
@@ -91,12 +92,23 @@
 
 
       <section id="upcoming" class="w-full mx-auto flex flex-col items-center justify-center bg-gradient-to-b from-black to-gray-700 text-red-400 py-8 px-4">
-        <h3 class="font-bold text-3xl text-center pt-8 pb-4">The Next One!</h3>
+        <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
         <p class="pb-4 text-yellow-400">Monday, June 5, 2023</p>
         <img src="./static/images/FHE-Game-Night-Jun-2023.png" alt="Singles 31+ Game Night/FHE June 2023" class="w-full max-w-4xl rounded shadow-lg" />
       </section>
 
-      <section id="map" class="overflow-x-auto flex flex-col items-center justify-center py-24">
+      <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
+        <h3 class="font-bold text-3xl text-center pt-8 pb-4 text-purple-500">Invitations to Share!</h3>
+        <p>Go to 
+          <a href="https://docs.google.com/document/d/1cvVYytMzXdDsZSj9oZFFDV2qENDF2agZJghHmLePxic/edit?usp=sharing" target="_blank" class="hover:text-purple-700 hover:underline">Google Doc</a>
+        </p>
+        <span>or</span>
+        <a href="./static/documents/invitation.pdf" download class="flex flex-col items-center justify-around bg-pink-500 p-4 rounded-md hover:bg-pink-600 shadow space-y-1">
+          <img src="./static/images/game-night-logo.png" class="w-24 h-24 rounded-full" />
+          <span class="font-bold text-white">Download PDF</span></a>
+      </section>
+
+      <section id="map" class="overflow-x-auto flex flex-col items-center justify-center pb-8 md:pt-16 md:pb-24">
         <h3 class="font-bold text-3xl text-center pt-8 pb-4 text-green-600">Map</h3>
         <p class="p-4 text-sm md:text-base text-center">Enter the south doors for quickest access to the Relief Society room.</p>
         <div class="md:hidden">
@@ -162,9 +174,13 @@
         </div>
       </section>
 
-      <div class="w-full bg-gray-100 py-24 px-4">
-        <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-16">
+      <div class="w-full bg-gray-100 md:py-24 px-4">
+        <section id="past-events" class="flex flex-col items-center justify-center container mx-auto space-y-6 md:space-y-16">
           <h3 class="font-bold text-3xl text-center pt-8 text-orange-600">Past Events</h3>
+
+          <div class="w-full flex items-center justify-center rounded-md overflow-hidden shadow">
+            <img src="./static/images/carousel/may-2023-group.jpeg" alt="May 2023 group" class="rounded-md shadow"/>
+          </div>
 
           <!-- Desktop Carousel -->
           <div class="hidden md:block container"> 
@@ -173,6 +189,10 @@
                 <ul class="glide__slides">
                   <li class="glide__slide">
                     <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/IMG_8638.JPG')">
+                    </div>                  
+                  </li>
+                  <li class="glide__slide">
+                    <div class="bg-cover shadow-lg rounded-md bg-center bg-no-repeat h-48 md:h-80" style="width: 500px; background-image: url('./static/images/carousel/may-2023-including-kari.jpeg')">
                     </div>                  
                   </li>
                   <li class="glide__slide">
@@ -260,6 +280,7 @@
                 <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=12"></button>
                 <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=13"></button>
                 <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=14"></button>
+                <button class="glide__bullet rounded-full w-2 h-2 md:w-5 md:h-5 bg-green-400 md:mx-2" data-glide-dir="=15"></button>
               </div>
             </div> <!-- end glide -->
           </div> <!-- end glide wrapper container -->
@@ -271,6 +292,9 @@
                 <ul class="glide__slides">
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/IMG_8638.JPG" />               
+                  </li>
+                  <li class="glide__slide">
+                    <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/may-2023-including-kari.jpeg" />               
                   </li>
                   <li class="glide__slide">
                     <img alt="Singles FHE/Game Night" class="shadow rounded-md" src="./static/images/carousel/making-jenga-time-capsule.JPG" />               
@@ -413,8 +437,8 @@
         </section>
       </div>
 
-      <div class="py-24" id="links">
-        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600 flex items-center justify-center space-x-2">
+      <div class="py-24 px-4" id="links">
+        <h3 class="font-bold text-3xl text-center pb-8 text-orange-600 flex flex-col items-center justify-center space-x-2 md:flex-row">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" class="w-12" fill="#0096FF">
             <!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <path d="M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0L579.8 267.7zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5L217.7 177.2c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0L60.2 244.3z"/></svg> 
