Adds playlist based on books

--- a/resources.html
+++ b/resources.html
@@ -201,6 +201,14 @@
               loading="lazy"></iframe>
           </div>
 
+          <div class="p-2 flex flex-col items-center justify-center space-y-2 w-full">
+            <p class="font-marhey font-medium text-center">For National Book Month (Oct.) or another book-themed event:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/741ZwmAkdHUWsMkrJWOzCH?utm_source=generator&theme=0" width="100%" height="80"
+              frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"></iframe>
+          </div>
+
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For Halloween Time:</p>
             <iframe style="border-radius:12px"
