Adds link to new group

--- a/index.html
+++ b/index.html
@@ -519,6 +519,11 @@
             class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
             LDS Widows & Widowers - Utah County (Facebook)
           </a>
+
+          <a href="https://www.facebook.com/groups/358774688789404" target="_blank" rel="noopener noreferrer nofollow"
+            class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500">
+            Utah LDS Singles Group (45 to 65) (Facebook)
+          </a>
       </div>
     </main>
 
