--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@
         <h3 class="font-bold text-3xl text-center pb-4 md:pt-8 ">The Next One!</h3>
         <p class="pb-4 text-yellow-400">Monday, July 10, 2023</p>
         <img src="./static/images/July2023FHEGameNight.png" alt="Singles 31+ Game Night/FHE July 2023" class="w-full max-w-4xl rounded shadow-lg" />
+
+        <a 
+          class="pt-6"
+          target="_blank" 
+          href="https://calendar.google.com/calendar/event?action=TEMPLATE&tmeid=N29pdjB2ZWgzbTAya3FyMHFrZW41cnVucWsgMjY0YmU1ZWUxNDUzNjNjODcwZmFlYWYxNDBkYjg4M2FkN2YxYTljOWU0MmMzZDE1YjZkMjY5NzhhMGFmODI1YUBn&tmsrc=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com"
+        >
+            <img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif" alt="google calendar button">
+        </a>
+
+        <iframe 
+          src="https://calendar.google.com/calendar/embed?src=264be5ee145363c870faeaf140db883ad7f1a9c9e42c3d15b6d26978a0af825a%40group.calendar.google.com&ctz=America%2FDenver" 
+          class="mt-4 w-full h-96 md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto border-4 border-yellow-400 rounded shadow-lg bg-white p-2 md:p-4"
+        ></iframe>
       </section>
 
       <section id="invitation" class="py-8 md:py-16 px-4 flex flex-col items-center justify-center space-y-2 bg-yellow-100 w-full">
