Updates site with resources and images from Aug

--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
 <html>
 
   <head>
@@ -134,6 +134,12 @@
               The Name Game
             </a>
           </li>
+          <li>
+            <a href="http://www.littlegiraffes.com/Melt%20an%20Ice%20Cube%20Game.pdf" target="_blank" rel="noopener noreferrer nofollow"
+              class="flex font-marhey text-sm md:text-xl font-bold text-blue-700 hover:text-blue-800 px-4 py-2 bg-blue-100 rounded m-2 hover:bg-blue-200">
+              The Ice Cube Melting Game 🧊
+            </a>
+          </li>
         </ul>
       </section>
       <img src="./static/images/game-board.png" alt="game board" class="pb-12 w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/5" />
@@ -186,6 +192,14 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2">
+            <p class="font-marhey font-medium text-center text-sm">For AC Appreciation Days:</p>
+            <iframe style="border-radius:12px"
+              src="https://open.spotify.com/embed/playlist/0gJw6LztClcol3iWpVfjP0?utm_source=generator&theme=0" width="100%" height="80"
+              frameBorder="0" allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          </div>
+
+          <div class="p-2 flex flex-col items-center justify-center space-y-2">
             <p class="font-marhey font-medium text-center">For Back-to-School Time:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/5A7wJ9BYAj9Taf1GZKN7JM?utm_source=generator" width="100%" height="80"
@@ -202,7 +216,7 @@
           </div>
 
           <div class="p-2 flex flex-col items-center justify-center space-y-2 w-full">
-            <p class="font-marhey font-medium text-center">For National Book Month (Oct.) or another book-themed event:</p>
+            <p class="font-marhey font-medium text-center text-sm">For National Book Month (Oct.) or another book-themed event:</p>
             <iframe style="border-radius:12px"
               src="https://open.spotify.com/embed/playlist/741ZwmAkdHUWsMkrJWOzCH?utm_source=generator&theme=0" width="100%" height="80"
               frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -261,19 +275,25 @@
         <p class="italic text-xs md:text-sm">(Notes about what we've done in the past)</p>
 
         <div>
-          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">April</h5>
-          <p>We started off our night with an "Who am I?" Easter trivia game! You can get the questions 
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">August 2023</h5>
+          <p class="text-center px-4">We talked about the story of the Chinese farmer, which can be found
+            <a href="https://www.wordonfire.org/articles/fellows/the-story-of-the-chinese-farmer/" 
+              target="_blank" rel="nofollow noreferrer noopener" class="text-purple-500 hover:text-purple-400">here</a>.</p>
+        </div>
+        <div>
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">April 2023</h5>
+          <p class="text-center px-4">We started off our night with an "Who am I?" Easter trivia game! You can get the questions 
             <a href="https://www.creativebiblestudy.com/Easter-quiz.html" target="_blank" rel="nofollow noreferrer noopener" class="text-purple-500 hover:text-purple-400">here</a>.</p>
         </div>
         <div>
-          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">February</h5>
+          <h5 class="text-center font-marhey text-sm md:text-xl font-bold">February 2023</h5>
           <p class="text-center">We talked about the different types of love, and what is the Greatest Love of All.</p>
           <p class="text-center">We played a game I made out of lyrics of famous love songs, which can be found
             <a href="https://ethyl2.github.io/fav-games/guess-that-song.html" target="_blank" class="text-green-700 hover:text-green-800">here</a>.</p>
         </div>
 
         <div class="flex flex-col items-center justify-center space-y-4 pt-4 px-4">
-          <h5 class="font-marhey text-sm md:text-xl font-bold">January</h5>
+          <h5 class="font-marhey text-sm md:text-xl font-bold">January 2023</h5>
           <p class="px-4 text-center text-xs md:text-base">Well, we were snowed out, darn it, but here's what I'd wanted to share & discuss:</p>
           <h6 class="font-marhey text-sm md:text-lg font-bold text-center">President Nelson's New Year 2023 Facebook Message</h6>
           <p class="whitespace-pre-line p-4 shadow rounded bg-white text-sm md:text-base">"For me, deep-sea fishing has been infrequent but instructive. Success requires patience, persistence, and prayer.
@@ -320,7 +340,7 @@
           </div>
         </div>
         <div class="flex flex-col items-center justify-center space-y-3 pt-8">
-          <h5 class="font-marhey text-sm md:text-xl font-bold">December</h5>
+          <h5 class="font-marhey text-sm md:text-xl font-bold">December 2022</h5>
           <p class="px-4 text-center text-xs md:text-base">We decided to channel Buddy the Elf and spread Christmas cheer, 'by singing loud for all to hear!'</p>
           <p class="px-4 text-center text-xs md:text-base">Instead of a spoken spiritual thought, we sang the energetic Christmas carol
             <a href="https://www.churchofjesuschrist.org/music/library/hymns/far-far-away-on-judeas-plains?lang=eng" target="_blank" rel="noopener noreferrer nofollow"
@@ -392,6 +412,7 @@
           </div>
         </a>
       </nav>
+      <a href="/index.html" class="pb-2 text-sm hover:text-green-200">Home</a>
       <p class="text-xs">Copyright <span id="current-year">2022</span> Heather Nuffer</p>
     </footer>
 
