--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
               </div> <!-- end glide -->
             </div> <!-- end glide wrapper container -->
 
-          <a href="/past-events.html" target="_blank"
+          <a href="./past-events.html" target="_blank"
             class="md:text-2xl text-center text-blue-600 font-bold md:font-normal hover:text-blue-500 flex flex-col items-center justify-center text-center p-4 rounded-md bg-gray-300 shadow-lg hover:bg-gray-200 transition duration-500 ease-in-out">
               See Flyers from Past Events
               <div id="flyer-thumbnails" class="flex items-stretch justify-center mx-auto space-x-2"></div>
