--- a/past-events.html
+++ b/past-events.html
@@ -62,7 +62,7 @@
         <a href="index.html#upcoming" class="text-xs sm:text-sm xl:text-lg  text-center hover:text-yellow-200">Next Event</a>
         <a href="index.html#map" class="hidden md:inline text-xs text-center sm:text-sm xl:text-lg  hover:text-yellow-200">Map</a>
         <a href="index.html#contact" class="text-xs sm:text-sm xl:text-lg text-center hover:text-yellow-200">Contact</a>
-        <a href="/resources.html" class="hidden lg:inline text-center text-xs sm:text-sm xl:text-lg  hover:text-yellow-200">
+        <a href="./resources.html" class="hidden lg:inline text-center text-xs sm:text-sm xl:text-lg  hover:text-yellow-200">
           Resources</a>
         <a href="index.html#links"
           class="hidden xl:inline text-xs sm:text-sm md:text-lg  hover:text-yellow-200">Other Groups</a>
