--- a/past-events.html
+++ b/past-events.html
@@ -54,10 +54,6 @@
       <h2 class="font-semibold text-sm text-yellow-200 md:text-3xl">Past Events</h2>
       <nav
         class="flex items-center justify-around space-x-4 md:space-x-12 mt-4 bg-gradient-to-b from-gray-500 to-gray-400  w-full pt-2 pb-1">
-        <a href="#games" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg text-center hover:text-yellow-200">Games</a>
-        <a href="#playlists" class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg  text-center hover:text-yellow-200">Playlists</a>
-        <a href="#messages"
-          class="smooth-scroll text-xs sm:text-sm lg:text-base xl:text-lg text-center hover:text-yellow-200">Messages</a>
         <a href="index.html#about" class="hidden md:inline text-xs sm:text-sm text-center xl:text-lg  hover:text-yellow-200">About</a>
         <a href="index.html#upcoming" class="text-xs sm:text-sm xl:text-lg  text-center hover:text-yellow-200">Next Event</a>
         <a href="index.html#map" class="hidden md:inline text-xs text-center sm:text-sm xl:text-lg  hover:text-yellow-200">Map</a>
@@ -73,6 +69,8 @@
     <main class="w-full mx-auto min-h-screen pt-48 md:pt-72 flex flex-col items-center justify-start">
         <img src="./static/images/game-board.png" alt="game board" class="pb-4 w-48" />
         <h2 class="font-marhey font-semibold text-lg md:text-3xl pb-8">Flyers from Past Events</h2>
+
+        <img src="./static/images/fhe-game-night-sept-2023.png" alt="Singles 31+ Game Night/FHE Sept 2023" class="w-full max-w-3xl py-6 px-4" />
       
         <section class="flex flex-col container mx-auto space-y-4">
             <div class="grid grid-cols-2 gap-4">
